last attempt to fix a color of the academy tag to increase a contrast for accessibility support

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -194,7 +194,7 @@ header {
 }
 
 .academy {
-  color: #ADA6A6;
+  color: #4E6778;
 }
 
 header nav {
